# personalized_job-copilot

./: README.md  plan.md
.github/workflows/: keep-alive.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  verify_phase_3b.py
backend/alembic/: env.py
backend/alembic/versions/: a90cff73c35d_initial_tables_users_resumes_analyses.py
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  base.py  content_generator.py  job_analyzer.py  pipeline.py  resume_parser.py  skill_gap.py  strategy_planner.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routes/: analyses.py  resumes.py
backend/app/core/: __init__.py  config.py
backend/app/db/: __init__.py  base.py  models.py
backend/app/db/repositories/: __init__.py  base.py
backend/app/schemas/: __init__.py  analysis.py  auth.py  resume.py  user.py
backend/app/services/: analysis.py  resume.py
backend/app/utils/: __init__.py  file_extraction.py  json_parsing.py
backend/tests/: conftest.py
backend/tests/integration/test_api/: test_analyses.py  test_main.py
backend/tests/unit/test_agents/: test_resume_parser.py
frontend/: package-lock.json  package.json  vitest.config.ts
frontend/playwright-report/: index.html
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/auth/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/features/: AnalysisList.tsx  AnalysisResults.tsx  JobInput.tsx  ResumeList.tsx  ResumeUpload.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
frontend/tests/e2e/: example.spec.ts
(+3 files in other folders)
